Add main entries for es & cjs

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@neeravp/vue-3-animate-in-view",
   "version": "0.0.1",
   "description": "Vue3 Directive & Component to animate elements as they appear in viewport",
-  "main": "index.js",
+  "main": "dist/vue3-animate-in-view.cjs.js",
+  "module": "dist/vue3-animate-in-view.es.js",
+  "jsnext:main": "dist/vue3-animate-in-view.es.js",
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && rollup --config rollup.config.js",
@@ -18,9 +20,13 @@
     "reveal"
   ],
   "author": "Neerav Pandya",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neeravp/vue3-animate-in-view"
+  },
   "license": "MIT",
   "dependencies": {
-    "vue": "^3.1.1"
+    "vue": ">=3.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.1",
