--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "@neeravp/vue-3-animate-in-view",
   "version": "0.0.1",
   "description": "Vue3 Directive & Component to animate elements as they appear in viewport",
-  "main": "dist/vue3-animate-in-view.cjs.js",
-  "module": "dist/vue3-animate-in-view.es.js",
-  "jsnext:main": "dist/vue3-animate-in-view.es.js",
+  "main": "dist/index",
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && rollup --config rollup.config.js",
