fixup! Added module declaration for use with TypeScript

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "@neeravp/vue-3-animate-in-view",
   "version": "0.0.1",
   "description": "Vue3 Directive & Component to animate elements as they appear in viewport",
-  "main": "dist/vue3-animate-in-view.cjs.js",
-  "module": "dist/vue3-animate-in-view.es.js",
-  "jsnext:main": "dist/vue3-animate-in-view.es.js",
-  "types": "src/vue-3-animate-in-view.d.ts",
+  "main": "index",
+  "module": "index",
+  "jsnext:main": "index",
+  "types": "src/index.d.ts",
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && rollup --config rollup.config.js",
