--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.1",
   "description": "Vue3 Directive & Component to animate elements as they appear in viewport",
   "main": "index",
-  "module": "index",
-  "jsnext:main": "index",
-  "types": "src/index.d.ts",
+  "types": "src/index",
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && rollup --config rollup.config.js",
