--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@neeravp/vue-3-animate-in-view",
   "version": "0.0.1",
   "description": "Vue3 Directive & Component to animate elements as they appear in viewport",
-  "main": "index",
+  "main": "dist/index",
   "types": "src/index",
   "scripts": {
     "clean": "rimraf dist",
