--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
       "typeRoots": [
           "src/types",
           "node_modules/@types"
-      ]
+      ],
+      "outDir": "./dist",
+      "declaration": true
     },
 
 
