--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,72 @@
+
 {
     "compilerOptions": {
-      "target": "esnext",
-      "module": "esnext",
-      "lib": ["esnext", "dom"],
-      // this enables stricter inference for data properties on `this`
-      "strict": true,
-      "jsx": "preserve",
-      "resolveJsonModule": true,
-      "moduleResolution": "node",
-      "baseUrl": ".",
-      "paths":{
-          "@/*": ["src/*"]
-      },
-      "esModuleInterop": true,
-      "sourceMap": true,
-      "outDir": "./dist",
-      "declaration": true,
-      "declarationDir": "dist"
+        "target": "esnext",
+        "module": "esnext",
+        "strict": true,
+        "declaration": true,
+        "declarationDir": "dist",
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "importHelpers": true,
+        "moduleResolution": "node",
+        "experimentalDecorators": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "sourceMap": true,
+        "baseUrl": ".",
+        "types": [
+            "node",
+            "vue"
+        ],
+        "paths": {
+            "@/*": [
+                "src/*"
+            ]
+        },
+        "lib": [
+            "esnext",
+            "dom",
+            "dom.iterable",
+            "scripthost"
+        ]
     },
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
+}
+// {
+//     "compilerOptions": {
+//       "target": "esnext",
+//       "module": "esnext",
+//       "lib": ["esnext", "dom"],
+//       // this enables stricter inference for data properties on `this`
+//       "strict": true,
+//       "jsx": "preserve",
+//       "resolveJsonModule": true,
+//       "moduleResolution": "node",
+//       "baseUrl": ".",
+//       "paths":{
+//           "@/*": ["src/*"]
+//       },
+//       "esModuleInterop": true,
+//       "sourceMap": true,
+//     //   "outDir": "./dist",
+//       "declaration": true,
+//       "declarationDir": "dist"
+//     },
 
 
-  "include": [
-    "src/**/*.js",
-    "src/**/*.ts",
-    "src/**/*.vue",
-    "src/**/*.d.ts",
-    "tests/**/*.ts",
-    "tests/**/*.d.ts",
-  ]
-    // "files": [
-    //     "src/index.d.ts"
-    // ]
-  }
+//   "include": [
+//     "src/**/*.js",
+//     "src/**/*.ts",
+//     "src/**/*.vue",
+//     "src/**/*.d.ts",
+//     "tests/**/*.ts",
+//     "tests/**/*.d.ts",
+//   ]
+//     // "files": [
+//     //     "src/index.d.ts"
+//     // ]
+//   }
