--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neeravp/vue-3-animate-in-view",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Vue3 Directive & Component to animate elements as they appear in viewport",
   "main": "dist/vue-3-animate-in-view.ssr.js",
   "browser": "dist/vue-3-animate-in-view.esm.js",
@@ -45,6 +45,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
+    "@rollup/plugin-strip": "^2.1.0",
     "@vue/compiler-sfc": "^3.1.2",
     "cross-env": "^7.0.3",
     "eslint": "^7.29.0",
